--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
   "name": "native-keyshare",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
-  "scripts": {
-    "install": "node-gyp rebuild",
-    "build": "node-gyp rebuild",
-    "test": "node test.js"
-  },
   "keywords": [
     "native",
     "addon",
@@ -26,28 +21,17 @@
     "type": "git",
     "url": "git+https://github.com/Shay12tg/native-keyshare.git"
   },
-  "dependencies": {
-    "node-addon-api": "^8.3.0",
-    "node-gyp": "^10.0.1"
+  "dependencies": {},
+  "optionalDependencies": {
+    "msgpackr": "^1.11.2",
+    "msgpackr-extract": "^3.0.3"
   },
   "files": [
-    "shared_object.cc",
-    "binding.gyp",
     "index.js",
     "index.d.ts",
     "README.md"
   ],
   "engines": {
     "node": ">=18.0.0"
-  },
-  "os": [
-    "darwin",
-    "linux",
-    "win32"
-  ],
-  "cpu": [
-    "x64",
-    "arm64"
-  ],
-  "gypfile": true
+  }
 }
